--- a/reservia.html
+++ b/reservia.html
@@ -214,7 +214,7 @@
                     <img src="images/hebergements/4_small/creative.jpg" alt="images"/>
                     <figcaption class="legende2">
                         <p>Au coeur de l'eau <br/>
-                        Chambres d'hôtes</p>
+                        chambres d'hôtes</p>
                         <p>Nuit à partir de 71€</p>
                         <p class="star">
                             <i class="fas blue-star fa-star"></i>
@@ -262,16 +262,20 @@
                 </div>
                 <div class="map">
                     <figure class="column figure-mobile">
-                        <div class="img-container">
+                        <div class="img-container img-container-s">
                             <img src='images/activites/3_medium/paul.jpg' alt="activites">
                         </div>
-                        <figcaption>Fort de Pomègues</figcaption>
+                        <figcaption>
+                            <p>Fort de Pomègues</p>
+                        </figcaption>
                     </figure>
                     <figure class="frioul figure-mobile">
-                        <div class="img-container">
+                        <div class="img-container img-container-xs">
                             <img src='images/activites/3_medium/kevin.jpg' alt="activites">
                         </div>
-                        <figcaption>îles du Frioul</figcaption>
+                        <figcaption>
+                            <p>îles du Frioul</p>
+                        </figcaption>
                     </figure>
                 </div>
                 <div class="image">
@@ -279,21 +283,27 @@
                         <div class="img-container">
                             <img class="essai" src='images/activites/1_xlarge/kilyan.jpg' alt="activites">
                         </div>
-                        <figcaption>Parc national des calanques</figcaption>
+                        <figcaption>
+                            <p>Parc national des calanques</p>
+                        </figcaption>
                     </figure>
                 </div>
                 <div class="map">
                     <figure class="notre-dame-de-la-garde figure-mobile">
-                        <div class="img-container">
+                        <div class="img-container img-container-xs">
                             <img src='images/activites/3_medium/florian.jpg' alt='activites'>
                         </div>
-                        <figcaption>Notre-Dame-de-la-garde</figcaption>
+                        <figcaption>
+                            <p>Notre-Dame-de-la-garde</p>
+                        </figcaption>
                     </figure>
                     <figure class="longchamp figure-mobile">
-                        <div class="img-container">
+                        <div class="img-container img-container-s">
                             <img src='images/activites/3_medium/lena.jpg' alt="activites">
                         </div>
-                        <figcaption>Parc Longchamp</figcaption>
+                        <figcaption>
+                            <p>Parc Longchamp</p>
+                        </figcaption>
                     </figure>
                 </div>
             </div>
@@ -304,23 +314,23 @@
             <div id="a_propos">
                 <h3>A propos</h3>
                 <ul>
-                <li><a href="#">Fonctionnement du site</a></li>
-                <li><a href="#">Conditions générales de vente</a></li>
-                <li><a href="#">Données confidentialités</a></li>
+                <li><a class="link" href="#">Fonctionnement du site</a></li>
+                <li><a class="link" href="#">Conditions générales de vente</a></li>
+                <li><a class="link" href="#">Données confidentialités</a></li>
                 </ul>
             </div>
             <div id="nos_hebergements">
                 <h3>Nos hébergements</h3>                                                                 
                 <ul>
-                <li><a href="#">Charte de qualité</a></li>
-                <li><a href="#">Soumettre votre hôtel</a></li>
+                <li><a class="link" href="#">Charte de qualité</a></li>
+                <li><a class="link" href="#">Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div id="assistance">
                 <h3>Assistance</h3>
                 <ul>
-                <li><a href="#">Centre d'aide</a></li>
-                <li><a href="#">Nous contacter</a></li>
+                <li><a class="link" href="#">Centre d'aide</a></li>
+                <li><a class="link" href="#">Nous contacter</a></li>
                 </ul>
             </div>
     </div>
