--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     </div>
     
         <aside>
-            <h2 id='activites'>Activités à Marseille</h2>
+            <h2 class="activites">Activités à Marseille</h2>
             <div id="section_activites">
                 <div class="image">
                     <figure class="activites figure-mobile">
